@@ -283,11 +283,11 @@ on_connection_event (ConIcConnection *cnx, ConIcConnectionEvent *event, gpointer
 	HandleConnInfo *iinfo;
 	int con_err, con_state;
 	const gchar *event_iap_id;
-	
+
 	/* we don't need cnx in this function */
 	g_return_if_fail (user_data && TNY_IS_MAEMO_CONIC_DEVICE(user_data));
 	g_return_if_fail (event && CON_IC_IS_CONNECTION_EVENT(event));
-	
+
 	device = TNY_MAEMO_CONIC_DEVICE (user_data);
 	priv = TNY_MAEMO_CONIC_DEVICE_GET_PRIVATE (device);
 
@@ -318,25 +318,54 @@ on_connection_event (ConIcConnection *cnx, ConIcConnectionEvent *event, gpointer
 
 	switch (con_state) {
 		case CON_IC_STATUS_CONNECTED:
-			g_free (priv->iap);
-			priv->iap = g_strdup (event_iap_id);
-			if (!priv->is_online)
+			if (priv->is_online) {
+				/* Emit if the IAP have changed. Means a reconnection */
+				if (priv->iap && event_iap_id && !strcmp (priv->iap, event_iap_id))
+					emit = FALSE;
+				else
+					emit = TRUE;
+				g_free (priv->iap);
+				priv->iap = NULL;
+			} else {
 				emit = TRUE;
+			}
+			priv->iap = g_strdup (event_iap_id);
 			is_online = TRUE;
 			/* Stop blocking tny_maemo_conic_device_connect(), if we are: */
 			stop_loop (device);
 			break;
 
 		case CON_IC_STATUS_DISCONNECTED:
-			g_free (priv->iap);
-			priv->iap = NULL;
-			if (priv->is_online)
-				emit = TRUE;
+			if (priv->is_online) {
+				/* If the IAP is the same then the current connection
+				   was disconnected */
+				if (priv->iap && event_iap_id && !strcmp (priv->iap, event_iap_id)) {
+					g_free (priv->iap);
+					priv->iap = NULL;
+					is_online = FALSE;
+					emit = TRUE;
+				} else {
+					/* Means that the current connection was not
+					   disconnected but a previous one. For example
+					   when switching between networks */
+					is_online = TRUE;
+					emit = FALSE;
+				}
+			} else {
+				/* Disconnection when we are already disconnected */
+				if (priv->iap) {
+					g_free (priv->iap);
+					priv->iap =  NULL;
+				}
+				is_online = FALSE;
+				emit = FALSE;
+			}
 			/* if iap is "" then connection attempt has been canceled */
+
 			if ((con_err == CON_IC_CONNECTION_ERROR_NONE) &&
 			    (!event_iap_id || (strlen (event_iap_id)== 0)))
 				con_err = CON_IC_CONNECTION_ERROR_USER_CANCELED;
-			is_online = FALSE;
+
 			/* Stop blocking tny_maemo_conic_device_connect(), if we are: */
 			stop_loop (device);
 			break;
