@@ -1,3 +1,10 @@
+2009-09-11  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail-maemo/tny-maemo-conic-device.c
+	(on_connection_event): properly handle messages comming from
+	conic. Now the TnyDevice properly handles
+	connection events when changing between networks.
+
 2009-09-08  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-folder.c (folder_tracking_changed):
